# thesis_2

./: .gitignore  init_recipe.sh  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  tutorials.rst
hyperstack/: cloud_init.sh  hyperstack_cli.py
lsf/: enhance.sh  gpustat.sh  gpuv100.sh  hpc.sh  submit.sh  train.sh
mbchl/: filesystem.py  logging.py  plot.py  utils.py
mbchl/data/: batching.py  dataloader.py  datasets.py  framrir.py
mbchl/has/: __init__.py  base.py  bsrnnha.py  convtasnetha.py  ffnnha.py  ineubeha.py  registry.py  tcndenseunetha.py  tfgridnetha.py
mbchl/layers/: __init__.py  conv.py  fusion.py  norm.py  resampling.py
mbchl/metrics/: __init__.py  base.py  dnsmos.py  nisqa.py  pesq.py  registry.py  snr.py  stoi.py
mbchl/nets/: __init__.py  bsrnn.py  convtasnet.py  diffunet.py  ffnn.py  registry.py  tcndenseunet.py  tfgridnet.py
mbchl/signal/: auditory.py  filters.py  mel.py  stft.py
mbchl/training/: ema.py  (+2 more)
scripts/: auditory_model.py  benchmark_metrics.py  convert_audio.py  databases_stats.py  download_databases.py  flop_counter.py  melspectrogram.py  plot_drnl_filterbank.py  plot_frame_average.py  plot_gammatone_filterbank.py  plot_gammatone_filters.py  plot_mauler_windows.py  plot_mel_filters.py  plot_sdes.py  pretty_table.py  remote_dataset.py  remote_dynamic_dataset.py  split_tar.py  train.py
tests/: conftest.py  test_batching.py  test_dataset.py  test_ema.py  test_filters.py  test_has.py  test_losses.py  test_mel.py  test_metrics.py  test_norm.py  test_resampling.py  test_stft.py  test_trainer.py  test_utils.py
(+145 files in other folders)
